added Tic-Tac-UFO into portfolio

--- a/index.html
+++ b/index.html
@@ -143,31 +143,46 @@
             </div>
           </div>
         </div>
-        <div class="project">
+        <div class="indv-project">
           <div class="outer-border">
             <div class="container">
-              <h4>PROJECT NAME</h4>
+              <h4>Tic-Tac-UFO</h4>
+              <div class="icons">
+                <p>
+                  <i class="fa-brands fa-html5"></i>
+                  <i class="fa-brands fa-css3"></i>
+                  <i class="fa-brands fa-js"></i>
+                </p>
+              </div>
               <div class="content">
-                <div>
-                  <h5>Tech Stack</h5>
-                  <ul>
-                    <li>TECH</li>
-                    <li>TECH</li>
-                    <li>TECH</li>
-                  </ul>
+                <div class="project-details">
+                  <div>
+                    <h5>Tech Stack</h5>
+                    <ul>
+                      <li>DOM Manipulation</li>
+                      <li>Event Handling</li>
+                      <li>Timers</li>
+                      <li>Minimax Algorithm</li>
+                      <li>Heuristic Evaluation</li>
+                    </ul>
+                  </div>
+                  <div>
+                    <h5>Project Components</h5>
+                    <ul>
+                      <li>Change player names</li>
+                      <li>PvP Mode</li>
+                      <li>PvC - Easy Mode</li>
+                      <li>PvC - Hard Mode</li>
+                    </ul>
+                  </div>
                 </div>
-                <div>
-                  <h5>Project Components</h5>
-                  <ul>
-                    <li>COMPONENT</li>
-                    <li>COMPONENT</li>
-                    <li>COMPONENT</li>
-                  </ul>
-                </div>
+
                 <figure>
-                  <img src="" alt="" />
+                  <img src="./images/GamePlayTicTacUFO.png" alt="" />
                   <figcaption>
-                    <a href="">GITHUB REPOSITORY</a>
+                    <a href="https://github.com/Sam-Lemon/Tic-Tac-Toe"
+                      >GitHub Repository</a
+                    >
                   </figcaption>
                 </figure>
               </div>
@@ -175,7 +190,7 @@
           </div>
         </div>
       </div>
-      <div class="project">
+      <!-- <div class="indv-project">
         <div class="outer-border">
           <div class="container">
             <h4>PROJECT NAME</h4>
@@ -205,7 +220,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <script
@@ -220,8 +235,3 @@
     <script src="./script.js"></script>
   </body>
 </html>
-
-<!-- Former live entertainment professional turned web developer, I'm excited
-        to bring my creative perspective to the digital world. Join me as I 
-        merge technical skills with artistic passion to craft engaging,
-        dynamic web experiences. -->
