--- a/index.html
+++ b/index.html
@@ -8,78 +8,71 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Notable&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Notable&family=Handjet:wght@100..900&family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
     <script
       src="https://kit.fontawesome.com/2c38b20589.js"
       crossorigin="anonymous"
     ></script>
 
-    <title>My Portfolio</title>
+    <title>Portfolio -- Sam Lemon</title>
   </head>
   <body>
-    <section class="bio">
-      <h1 class="glow-text upper">Sam Lemon</h1>
-      <div class="underline"></div>
-      <h3 class="glow-text">Web Developer</h3>
-      <div class="socials">
-        <a href="https://www.linkedin.com/in/samlemon/" target="_blank">
-          <i class="fa-brands fa-linkedin-in"></i>
-        </a>
-        <a href="https://github.com/Sam-Lemon" target="_blank">
-          <i class="fa-brands fa-github"></i>
-        </a>
+    <section class="biography">
+      <div class="bio">
+        <h1 class="glow-text upper">Sam Lemon</h1>
+        <div class="underline"></div>
+        <h3 class="glow-text">Web Developer</h3>
+
+        <div class="socials">
+          <a href="https://www.linkedin.com/in/samlemon/" target="_blank">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/Sam-Lemon" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </div>
+
+        <div class="about-me">
+          <p>
+            As a former live entertainment pro turned web developer, I'm merging
+            the magic of the stage with the thrill of code to craft immersive,
+            dynamic web experiences that dazzle and inspire.
+          </p>
+        </div>
       </div>
 
-      <div class="about-me">
-        <p>
-          As a former live entertainment pro turned web developer, I'm merging
-          the magic of the stage with the thrill of code to craft immersive,
-          dynamic web experiences that dazzle and inspire.
-        </p>
+      <div class="headshot">
+        <img
+          src="./images/me-croppedsquare-modified.jpg"
+          alt="Sam's head shot"
+        />
       </div>
+    </section>
 
+    <section>
       <div class="contact">
         <div class="contact-border">
           <h4 class="glow-text">Contact Me</h4>
-          <form>
-            <div>
-              <label for="first-name">First Name:</label>
-              <input type="text" id="first-name" name="first-name" required />
-            </div>
-            <div>
-              <label for="last-name">Last Name:</label>
-              <input type="text" id="last-name" name="last-name" required />
-            </div>
-            <div>
-              <label for="email">Email:</label>
-              <input type="email" id="email" name="email" required />
-            </div>
-            <div>
-              <label for="message">Message:</label>
-              <textarea
-                name="message"
-                id="message"
-                rows="4"
-                required=""
-              ></textarea>
-            </div>
+          <form action="" method="" class="contact-form">
+            <label for="first-name">First Name:</label>
+            <input type="text" id="first-name" name="first-name" required />
 
+            <label for="last-name">Last Name:</label>
+            <input type="text" id="last-name" name="last-name" required />
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
+
+            <label for="message">Message:</label>
+            <textarea
+              name="message"
+              id="message"
+              rows="4"
+              required=""
+            ></textarea>
             <button type="submit">Send Message</button>
           </form>
           <div id="status"></div>
@@ -88,12 +81,6 @@
     </section>
 
     <section class="project-list">
-      <div class="headshot">
-        <img
-          src="./images/me-croppedsquare-modified.jpg"
-          alt="Sam's head shot"
-        />
-      </div>
       <div class="project">
         <h2 class="glow-text">Projects</h2>
 
@@ -132,6 +119,7 @@
                   <img
                     class="project-img"
                     src="./images/CactiCraftedWebsiteFrontPage.png"
+                    alt="CactiCrafted website front page"
                   />
                   <figcaption>
                     <a href="https://github.com/Sam-Lemon/CactiCrafted-Website"
@@ -178,7 +166,10 @@
                 </div>
 
                 <figure>
-                  <img src="./images/GamePlayTicTacUFO.png" alt="" />
+                  <img
+                    src="./images/GamePlayTicTacUFO.png"
+                    alt="Game play for Tic-Tac-UFO game"
+                  />
                   <figcaption>
                     <a href="https://github.com/Sam-Lemon/Tic-Tac-Toe"
                       >GitHub Repository</a
@@ -190,37 +181,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="indv-project">
-        <div class="outer-border">
-          <div class="container">
-            <h4>PROJECT NAME</h4>
-            <div class="content">
-              <div>
-                <h5>Tech Stack</h5>
-                <ul>
-                  <li>TECH</li>
-                  <li>TECH</li>
-                  <li>TECH</li>
-                </ul>
-              </div>
-              <div>
-                <h5>Project Components</h5>
-                <ul>
-                  <li>COMPONENT</li>
-                  <li>COMPONENT</li>
-                  <li>COMPONENT</li>
-                </ul>
-              </div>
-              <figure>
-                <img src="" alt="" />
-                <figcaption>
-                  <a href="">GITHUB REPOSITORY</a>
-                </figcaption>
-              </figure>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </section>
 
     <script
